<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/frag_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/this_is_the_profile_page"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/favpath"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="371dp"
        android:layout_height="100dp"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/view_edit_your_favorite_path"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/cychistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/cychistory"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="371dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/your_cycling_history"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/editprofile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favpath" />

    <Button
        android:id="@+id/editprofile"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="371dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="187dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/your_profile"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/frag_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cychistory" />


</androidx.constraintlayout.widget.ConstraintLayout>