<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exercise_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_anchor="@+id/exe_linear2"
        app:layout_anchorGravity="center">

        <com.google.android.gms.maps.MapView
            android:id="@+id/exercise_mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="200dp">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/racks_searchbar">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/distnum"
                    android:layout_width="292dp"
                    android:layout_height="48dp"
                    android:text="@string/_4_61km"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintBottom_toTopOf="@+id/imageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distancetext"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/distancetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/durationtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginBottom="140dp"
                    android:text="@string/duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/speedtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="110dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="140dp"
                    android:text="@string/speed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.993"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="192dp"
                    android:layout_marginLeft="192dp"
                    android:layout_marginTop="86dp"
                    android:layout_marginEnd="192dp"
                    android:layout_marginRight="192dp"
                    android:layout_marginBottom="3dp"
                    android:contentDescription="@string/toparrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distancetext"
                    app:srcCompat="@drawable/toparrow" />

                <TextView
                    android:id="@+id/timenumber"
                    android:layout_width="92dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="28dp"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="53dp"
                    android:layout_marginRight="53dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/_00_30_22"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.192"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/durationtext"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/speednumber"
                    android:layout_width="92dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="53dp"
                    android:layout_marginLeft="53dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginRight="28dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/_8_43_km_h"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.542"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toBottomOf="@+id/speedtext"
                    app:layout_constraintVertical_bias="0.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/exe_linear2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exe_linear3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/mylocationbutton"
                android:layout_width="88dp"
                android:layout_height="117dp"
                android:layout_marginStart="270dp"
                android:layout_marginLeft="270dp"
                android:layout_marginTop="350dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="217dp"
                android:background="#00FFFCFC"
                android:contentDescription="@string/mylocation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.042"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/iconmylocation" />

            <ImageButton
                android:id="@+id/startbutton"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="360dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/buttonborder"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/startexercise"
                android:elevation="10dp"
                android:fadingEdge="horizontal|vertical"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.742"
                app:srcCompat="@drawable/button_startexercise" />

            <ImageButton
                android:id="@+id/stopbutton"
                android:layout_width="59dp"
                android:layout_height="63dp"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="360dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/buttonborder"
                android:contentDescription="@string/stopexercise"
                android:elevation="10dp"
                android:fadingEdge="horizontal|vertical"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.18"
                app:layout_constraintStart_toEndOf="@+id/startbutton"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.754"
                app:srcCompat="@drawable/button_stopexercise" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>